--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   another_stepper: ^1.2.2
   swipeable_button_view: ^0.0.2
   page_transition: ^2.1.0
+  animated_bottom_navigation_bar: ^1.3.3
+  circular_reveal_animation: ^2.0.1
+  auto_size_text: ^3.0.0
+  cached_network_image: ^3.3.0
   
 
 dev_dependencies:
