--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   cached_network_image: ^3.3.0
   flutterwave_standard: ^1.0.7
   uuid: ^4.3.3
+  font_awesome_flutter: ^10.7.0
   
   
 
