--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,7 +43,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.hiiveuser"
+        applicationId "com.hiiveall.hiiveuser"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 21
@@ -52,13 +52,24 @@ android {
         versionName flutterVersionName
     }
 
-    buildTypes {
+    
+
+    signingConfigs {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            keyAlias 'key'
+            keyPassword '123456'
+            storeFile file("../app/key.jks")
+            storePassword '123456'
         }
     }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+            crunchPngs false // or true
+            
+        }
+    }
+    
 }
 
 flutter {
