--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   marquee: ^2.2.3
   firebase_messaging: ^14.7.21
+  flutter_animated_button: ^2.0.3
   
   
 
