--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,24 +35,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.2.0
-  firebase_auth: ^4.1.2
-  cloud_firestore: ^4.0.5
-  firebase_storage: ^11.0.5
+  firebase_core: ^3.10.1
+  firebase_auth: ^5.4.1
+  cloud_firestore: ^5.6.2
+  firebase_storage: ^12.4.1
   image_picker: ^1.0.4
-  geolocator: ^10.0.0
-  geocoding: ^2.0.5
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
   shared_preferences: ^2.0.15
-  carousel_slider: ^4.1.1
+  carousel_slider: ^5.0.0
   flutter_staggered_grid_view: ^0.4.0
   number_inc_dec: ^0.8.0
   fluttertoast: ^8.1.2
   provider: ^6.0.5
   url_launcher: ^6.1.9
   shimmer: ^3.0.0
-  lottie: ^2.2.0
+  lottie: ^3.0.0
   # vertical_stepper: ^0.0.1
-  flutter_paystack: ^1.0.7
+  # flutter_paystack: ^1.0.7
   another_stepper: ^1.2.2
   swipeable_button_view: ^0.0.2
   page_transition: ^2.1.0
@@ -64,9 +64,10 @@ dependencies:
   uuid: ^4.3.3
   font_awesome_flutter: ^10.7.0
   marquee: ^2.2.3
-  firebase_messaging: ^14.7.21
+  firebase_messaging: ^15.2.1
   flutter_animated_button: ^2.0.3
   google_nav_bar: ^5.0.6
+  intl: ^0.20.2
   
   
 
@@ -79,7 +80,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
