--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,20 +31,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
-  firebase_storage: ^11.5.6
+  firebase_core: ^3.12.0
+  firebase_auth: ^5.5.0
+  cloud_firestore: ^5.6.4
+  firebase_storage: ^12.4.3
   image_picker: ^1.0.4
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   shared_preferences: ^2.0.15
   carousel_slider: ^5.0.0
-  flutter_staggered_grid_view: ^0.4.0
+  flutter_staggered_grid_view: ^0.7.0
   number_inc_dec: ^0.8.0
   fluttertoast: ^8.1.2
   provider: ^6.0.5
@@ -64,12 +63,14 @@ dependencies:
   uuid: ^4.3.3
   font_awesome_flutter: ^10.7.0
   marquee: ^2.2.3
-  firebase_messaging: ^14.7.9
+  firebase_messaging: ^15.2.3
   flutter_animated_button: ^2.0.3
   google_nav_bar: ^5.0.6
   intl: ^0.20.2
   flutter_local_notifications: ^18.0.1
   permission_handler: ^11.0.1  # For handling notification permissions
+  animated_text_kit: ^4.2.2
+  firebase_app_check: ^0.3.2+3
   
   
 
@@ -98,6 +99,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/animations/
+    - assets/images/
 
     
 
