--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,8 +54,9 @@ android {
         applicationId "com.hiiveall.hiiveuser"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 23
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 34
+        targetSdkVersion 34
+        // targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
