--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,4 +86,7 @@ flutter {
 
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
+    // Update or add these lines
+    implementation 'com.google.android.gms:play-services-base:18.2.0'
+    implementation 'com.google.firebase:firebase-messaging:23.2.1'
 }
