--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   firebase_app_check: ^0.3.2+3
   audioplayers: ^6.2.0
+  timeline_tile: ^2.0.0
   
   
 
